<resources>
    <string name="app_name">Projeto Firebase</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="text_cadastro">Crie uma conta clicando aqui</string>
    <string name="text_cadastre_se">Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome_usuario">Nome do usuário</string>
    <string name="email_usuario">E-mail do usuário</string>
    <string name="deslogar">Deslogar</string>
</resources>