<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormCadastro">

    <TextView
        android:id="@+id/title_cadastrose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/text_cadastre_se"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_cadastrose" />

    <EditText
        android:id="@+id/edit_nome"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        style="@style/Edit_Text"
        android:hint="@string/nome"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_nome"
        style="@style/Edit_Text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/ic_email"/>

    <EditText
        android:id="@+id/edit_senha"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        android:inputType="numberPassword"
        style="@style/Edit_Text"
        android:hint="@string/senha"
        android:drawableEnd="@drawable/ic_eye"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastrar"
        style="@style/Button"
        android:layout_marginTop="30dp"
        android:text="@string/cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha" />

</androidx.constraintlayout.widget.ConstraintLayout>